--- a/Cyber-Security.html
+++ b/Cyber-Security.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="index.html">
   </head>
   <body class="u-body"><header class="u-align-center u-clearfix u-header u-header" id="sec-19c2"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="http://mytechshop.org" class="u-align-center u-image u-logo u-image-1" title="logo">
+        <a href="https://www.mytechshop.org" class="u-align-center u-image u-logo u-image-1" title="logo">
           <img src="images/d3267388-b90b-4dbe-955c-208695c4.png" class="u-logo-image u-logo-image-1" data-image-width="105">
         </a>
         <a href="http://booking.mytechshop.org" class="u-btn u-button-style u-none u-text-hover-palette-1-light-2 u-text-palette-1-base u-btn-1" target="_blank">
